# restauracja-bazy

./: Bazy_danych.vpp  README.md  docker-compose.yml
database_queries/: .procedures.sql.swp  init.sql  procedures.sql  triggers.sql
restauracja_app/: build.gradle  settings.gradle
restauracja_app/src/main/java/: module-info.java
restauracja_app/src/main/java/pl/pwr/edu/restauracja_app/: App.java  Applikacja.java  HelloController.java  NavHelper.java  RestauracjaViewModel.java
restauracja_app/src/main/java/pl/pwr/edu/restauracja_app/base/: BaseUseCase.java
restauracja_app/src/main/java/pl/pwr/edu/restauracja_app/domain/: GetMenuUseCase.java  GetProductTypesUseCase.java
restauracja_app/src/main/java/pl/pwr/edu/restauracja_app/old/: App.java  BaseUseCase.java  HelloController.java  RestauracjaViewModel.java
restauracja_app/src/main/java/pl/pwr/edu/restauracja_app/presenter/: AdminPresenter.java  KelnerPresenter.java  KucharzPresenter.java  LoginPresenter.java
restauracja_app/src/main/java/pl/pwr/edu/restauracja_app/utils/: DatabaseRepository.java
restauracja_app/src/main/java/pl/pwr/edu/restauracja_app/view/: LoginView.java  View.java
restauracja_app/src/main/resources/pl/pwr/edu/restauracja_app/: admin-menu-view.fxml  dodaj-definicje-skladnika-view.fxml  dodaj-pozycje-view.fxml  edytuj-definicja-skladnika-view.fxml  hello-view.fxml  produkt-form-view.fxml  style.css  usun-definicje-skladnika-view.fxml  usun-pozycje-view.fxml  zaktualizuj-stan-magazynu-view.fxml
tests/: pyproject.toml  tests.py
(+56 files in other folders)
