[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["Kacper Filipiak <kisielWrosole@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
mysql = "^0.0.3"
mysql-connector-python = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
